# Grupo01_progp_cuda2

./: CMakeLists.txt  Ejercicio2.cu  ejer2.cpp
